Updated CSS to avoid overlapping of intro text

--- a/css/custom.css
+++ b/css/custom.css
@@ -277,7 +277,7 @@ li {
     width: 70%;
   }
   .splash {
-    background-position: center 95%;
+    background-position: center 170%;
   }
   .spacer-20 {
     height: 14em;
